--- a/src/components/weatherCard.css
+++ b/src/components/weatherCard.css
@@ -1,4 +1,16 @@
 .weatherCard {
-    margin: 40px 30px 0px 30px;
+    margin: 10px 10px 0px 10px;
+    border-radius: 8px;
+    border: 1px solid transparent;
+    padding: 10px;
+    background-color: #1a1a1a;
+    transition: border-color 0.25s;
+    font-family: inherit;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    width: 180px;
+  }
 
+.weatherCard:hover {
+    border-color: #646cff;
   }
