--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,19 @@
-
 .titleLogo {
   display: flex;
-  margin-bottom: -50px;
+  
 }
 .weatherLogo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
+  transition: height 0.3s ease;
+  overflow: hidden;
 }
 .weatherLogo:hover {
   filter: drop-shadow(0 0 2em #ffd901aa);
+  height: 7em;
 }
-
-
 
 .vite {
   height: 6em;
@@ -28,12 +28,42 @@
   filter: drop-shadow(0 0 1em #61dafbaa);
 }
 
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.inputForm{
+  margin-top: 50px;
 }
+
+.inputContainer {
+  display: flex;
+  justify-content: center;
+}
+
+
+input {
+  width: 200px;
+  border-style: none;
+  background-color: inherit;
+  border-bottom: 1px solid;
+  transition: border-bottom-color 0.3s ease, width 0.3s ease;
+  font-size: large;
+}
+
+input:focus {
+  border-bottom-color: #535bf2;
+  outline: none;
+  width: 220px;
+
+}
+
+input:hover {
+  border-bottom-color: #535bf2;
+  outline: none;
+  width: 220px;
+
+}
+
+
+
+
 
 .card {
   padding: 2em;
@@ -44,7 +74,7 @@
 }
 
 .fetchBtn{
-  margin-top: 50px;
+  margin-top: 15px;
 }
 
 .bodyContainer {
@@ -77,88 +107,4 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-}
-
-
-.lds-default {
-  display: inline-block;
-  position: relative;
-  width: 80px;
-  height: 80px;
-}
-.lds-default div {
-  position: absolute;
-  width: 6px;
-  height: 6px;
-  background: #cef;
-  border-radius: 50%;
-  animation: lds-default 1.2s linear infinite;
-}
-.lds-default div:nth-child(1) {
-  animation-delay: 0s;
-  top: 37px;
-  left: 66px;
-}
-.lds-default div:nth-child(2) {
-  animation-delay: -0.1s;
-  top: 22px;
-  left: 62px;
-}
-.lds-default div:nth-child(3) {
-  animation-delay: -0.2s;
-  top: 11px;
-  left: 52px;
-}
-.lds-default div:nth-child(4) {
-  animation-delay: -0.3s;
-  top: 7px;
-  left: 37px;
-}
-.lds-default div:nth-child(5) {
-  animation-delay: -0.4s;
-  top: 11px;
-  left: 22px;
-}
-.lds-default div:nth-child(6) {
-  animation-delay: -0.5s;
-  top: 22px;
-  left: 11px;
-}
-.lds-default div:nth-child(7) {
-  animation-delay: -0.6s;
-  top: 37px;
-  left: 7px;
-}
-.lds-default div:nth-child(8) {
-  animation-delay: -0.7s;
-  top: 52px;
-  left: 11px;
-}
-.lds-default div:nth-child(9) {
-  animation-delay: -0.8s;
-  top: 62px;
-  left: 22px;
-}
-.lds-default div:nth-child(10) {
-  animation-delay: -0.9s;
-  top: 66px;
-  left: 37px;
-}
-.lds-default div:nth-child(11) {
-  animation-delay: -1s;
-  top: 62px;
-  left: 52px;
-}
-.lds-default div:nth-child(12) {
-  animation-delay: -1.1s;
-  top: 52px;
-  left: 62px;
-}
-@keyframes lds-default {
-  0%, 20%, 80%, 100% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.5);
-  }
 }
