--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,7 @@
   height: 6em;
   padding: 1.5em;
   will-change: filter;
-  transition: filter 300ms;
-  transition: height 0.3s ease;
+  transition: filter 300ms, height 0.3s ease;
   overflow: hidden;
 }
 .weatherLogo:hover {
@@ -21,12 +20,17 @@
   transition: filter 300ms;
 }
 
+
 .vite:hover {
-  filter: drop-shadow(0 0 1em #646cffaa);
+  transition: filter 300ms;
+  filter: drop-shadow(0 0 2em #646cff);
 }
+
 .react:hover {
-  filter: drop-shadow(0 0 1em #61dafbaa);
+  transition: filter 300ms;
+  filter: drop-shadow(0 0 2em #61dafb);
 }
+
 
 .inputForm{
   margin-top: 50px;
