--- a/src/components/weathercard/weatherCard.css
+++ b/src/components/weathercard/weatherCard.css
@@ -1,4 +1,5 @@
-.weatherCarddark {
+.weatherCard {
+   --shadow-color: #000000aa;
   margin: 10px 10px 0px 10px;
   border-radius: 8px;
   border: 1px solid transparent;
@@ -10,33 +11,14 @@
   width: 180px;  
 }
 
-.weatherCarddark:hover {
+.weatherCard:hover {
   border-color: #646cff;
   transform: scale(1.1);
-  filter: drop-shadow(0 0 1em #000000aa);
+  filter: drop-shadow(0 0 1em var(--shadow-color));
 }
 
 
-.weatherCardlight {
-  margin: 10px 10px 0px 10px;
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 10px;
-  background-color: #0088b3;
-  transition: border-color 0.25s, transform 0.25s, filter 0.25s,background-color 1.5s;
-  font-family: inherit;
-  font-size: 1em;
-  width: 180px;
-  
-}
-
-.weatherCardlight:hover {
-  transform: scale(1.1);
-  filter: drop-shadow(0 0 1em #ffffffaa);
-}
-
-
-.weatherCardExtendeddark {
+.weatherCardExtended {
   display: none;
 }
 
