--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+.mainContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  place-items: center;
+  justify-content: center;
+}
 
 .titleLogo { 
   display: flex;
@@ -105,4 +112,15 @@ input:hover {
 
 .forecastLocation {
   margin-left: 3px;
+}
+
+.alertsContainer {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  flex-flow: end;
+  top: 0;
+  right: 0;
+  margin-right: 50px;
+  margin-top: 200px;
 }
